# turnip3-manager

./: package-lock.json  package.json  tailwind.config.js
src/: App.tsx  Root.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Blog.tsx  Header.tsx  MDXComponents.tsx  NavBar.tsx  Popup.tsx  Preview.tsx  TitleBar.tsx
src/components/Header/: Header.tsx  HeaderContentForNotWriting.tsx  HeaderContentForWriting.tsx  HierarchicalInfo.tsx  RightArrow.tsx  Writer.tsx
src/components/Header/ContentBrowser/: ContentBrowser.tsx
src/components/Header/ContentsBrowser/: ContentsBrowser.tsx
src/components/Header/Icons/: CloseIcon.tsx  FolderIcon.tsx  HelpIcon.tsx  QuillIcon.tsx  SettingsIcon.tsx  SubmitIcon.tsx
src/components/Header/MDXComponents/: MDXComponents.tsx
src/components/Header/MonacoEditor/: Turnip3Theme.tsx
src/components/Header/Variants/: RightButtonsVariants.tsx
src/components/Header/Writer/: Writer.tsx
src/components/Header/Writer/MDXComponents/: MDXComponents.tsx
src/components/Icons/: CloseIcon.tsx  FoldersIcon.tsx  HelpIcon.tsx  IconWithTooltip.tsx  IconsWithTooltip.tsx  SettingsIcon.tsx  SubmitIcon.tsx
src/contexts/: BlogContext.tsx  BlogsContext.tsx  GlobalStateContext.tsx  IsWritingPostContext.tsx  ShowNavBarContext.tsx
src/pages/: Blog.tsx  Home.tsx
src/types/: IBlog.ts  IFramerMotionVariants.ts  IGlobalStateType.ts  IIsWritingPost.ts  IPost.tsx  Post.tsx  blogType.ts  tooltipProps.ts
src/variants/: defaultVariants.tsx
(+1 files in other folders)
