[package]
name = "turnip3-manager"
version = "0.0.0"
description = "Manage Turnip3 Blogs"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-maximize", "window-unminimize", "window-close", "window-start-dragging", "window-unmaximize", "window-show", "window-hide", "window-minimize", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.1"
window-vibrancy = "0.4.0"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
